[Bug] SC-177799 iframe double vertical scrollbars

--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,8 @@
-html, body, #root, #root div {
+html, body, #root, #root div, iframe {
   height: 100%;
   width: 100%;
   padding: 0px;
   margin: 0px;
+  border: 0px;
+  overflow: hidden;
 }
